feat: added list-users component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
 <div class="main-container">
   <div class="content-container">
     <app-top-bar></app-top-bar>
+    <list-users></list-users>
   </div>
 
 </div>
