--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -2,7 +2,7 @@
   <button class="btn-filter"><mat-icon class="icon-filter">filter_list</mat-icon>{{ textConstants.textBtnFilter }}</button>
   <div class="input-container">
     <mat-icon style="color: #6D5BD0; font-size: 30px; margin: 0 0 4px 4px">search</mat-icon>
-    <label for="text"></label><input type="text" id="text" name="text">
+    <label for="text"></label><input (keyup)="keyUp($event)" type="text" id="text" name="text">
   </div>
 </div>
 <button class="btn-add-user">{{ textConstants.textBtnAddUser }}</button>
