--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 
 <div class="main-container">
+  <app-total-payable></app-total-payable>
   <div class="content-container">
     <app-top-bar></app-top-bar>
     <list-users></list-users>
