--- a/src/app/total-payable/total-payable.component.html
+++ b/src/app/total-payable/total-payable.component.html
@@ -1,3 +1,3 @@
 <div class="total-payed-container">
-  <div *ngIf="arrUsers" class="total-payed">{{textTotalPayed + getSum()}}</div>
+  <div *ngIf="myUserArr" class="total-payed">{{textTotalPayed + getSum()}}</div>
 </div>
